2009-02-20  Michael Hutchinson  <mhutchinson@novell.com>

	* CBinding.csproj: Don't use 'make' to build.

2009-02-18  Mike Krüger  <mkrueger@novell.com>

	* Project/Package.cs:
	* Project/CProject.cs:
	* Compiler/ICompiler.cs:
	* Compiler/CCompiler.cs:
	* Compiler/GNUCompiler.cs: Fixed 'Bug 456971 - ${ProjectDir}
	  Not updating for currently building project'.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/CTextEditorExtension.cs: Rename second 'openingLine'
	  variable, as csc is more picky about multiple locals with
	  the same name in switches.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* CBinding.csproj: Flush MD's removal of newline at end of
	  file that was introduced by manually editing with gedit.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* CBinding.csproj: Remove invalid ApplicationIcon value that
	  broke the build in VS.

2009-02-07  Mike Krüger  <mkrueger@novell.com>

	* Parser/TagDatabaseManager.cs: fixed compiler warnings.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* gtk-gui/CBinding.AddPathDialog.cs:
	* gtk-gui/CBinding.CompilerPanel.cs:
	* gtk-gui/CBinding.PackageDetails.cs:
	* gtk-gui/CBinding.AddLibraryDialog.cs:
	* gtk-gui/CBinding.EditPackagesDialog.cs:
	* gtk-gui/CBinding.OutputOptionsPanel.cs:
	* gtk-gui/CBinding.CodeGenerationPanel.cs:
	* gtk-gui/CBinding.GeneralOptionsPanel.cs: Flush.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* CBinding.mds:
	* CBinding.mdp:
	* CBinding.csproj: Migrated to MSBuild file format.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* CBinding.addin.xml: Bump MD version.

2009-01-27  Mike Krüger  <mkrueger@novell.com>

	* CBinding.addin.xml: fixed "Bug 468416 - *.h aren't colorized as c++
	headers".

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* CBinding.mdp: Flush project format changes.

2009-01-21  Mike Krüger  <mkrueger@novell.com>
